before figure arrangement

--- a/LaTeX/sample.bib
+++ b/LaTeX/sample.bib
@@ -162,7 +162,7 @@
     location = {Honolulu, Hawaii, USA},
     pages = {161--166},
     numpages = {6},
-    url = {http://doi.acm.org/10.1145/2642918.2647396},
+    % url = {http://doi.acm.org/10.1145/2642918.2647396},
     doi = {10.1145/2642918.2647396},
     acmid = {2647396},
     publisher = {ACM},
@@ -180,7 +180,7 @@
     number={4}, 
     pages={461-482}, 
     keywords={data acquisition;data gloves;gesture recognition;man-machine systems;medical computing;biomedical sciences;gestures recognition;glove-based systems;hand movement data acquisition;man-machine interfaces;Gestures recognition;man--machine interfaces;wearable sensors}, 
-    doi={10.1109/TSMCC.2008.923862}, 
+    % doi={10.1109/TSMCC.2008.923862}, 
     ISSN={1094-6977},}
     
 @inproceedings{Kim:2012:DFI:2380116.2380139,
@@ -193,7 +193,7 @@
     location = {Cambridge, Massachusetts, USA},
     pages = {167--176},
     numpages = {10},
-    url = {http://doi.acm.org/10.1145/2380116.2380139},
+    % url = {http://doi.acm.org/10.1145/2380116.2380139},
     doi = {10.1145/2380116.2380139},
     acmid = {2380139},
     publisher = {ACM},
@@ -209,7 +209,7 @@
     month={June}, 
     pages={138-142}, 
     keywords={bioacoustics;biomechanics;biomedical optical imaging;biomedical telemetry;body sensor networks;cameras;gesture recognition;human computer interaction;medical image processing;microphones;product design;telemedicine;HCI research;body sensor research;common usability aspect trends;free-hand microgesture usability;human computer interaction;microgestural application development;microgestural usability principle identification;microgesture physical commonalities;microgesture task time recording;multiple comparisons;physical scale;pilot user study;temporal scale;universal microgesture language;usability user study;user accuracy recording;wearable devices;wrist-worn microphones;wrist-worn sensors;wrist-worn time-of-flight cameras;Accuracy;Cameras;Error analysis;Indexes;Market research;Sensors;Usability;HCI;computer vision;gesture recognition;usability;wearable computing}, 
-    doi={10.1109/BSN.2014.32},}
+    % doi={10.1109/BSN.2014.32},}
 
 @article{Kulaksiz2002257,
     title = "The effect of hand preference on hand anthropometric measurements in healthy individuals ",
@@ -220,8 +220,8 @@
     year = "2002",
     note = "",
     issn = "0940-9602",
-    doi = "http://dx.doi.org/10.1016/S0940-9602(02)80119-4",
-    url = "http://www.sciencedirect.com/science/article/pii/S0940960202801194",
+    % doi = "http://dx.doi.org/10.1016/S0940-9602(02)80119-4",
+    % url = "http://www.sciencedirect.com/science/article/pii/S0940960202801194",
     author = "Gülnihal Kulaksiz and Rabet Gözil",
     keywords = "Hand preference",
     keywords = "Hand measurements "
@@ -237,7 +237,7 @@
  location = {Victoria, BC, Canada},
  pages = {167--176},
  numpages = {10},
- url = {http://doi.acm.org/10.1145/1622176.1622208},
+%  url = {http://doi.acm.org/10.1145/1622176.1622208},
  doi = {10.1145/1622176.1622208},
  acmid = {1622208},
  publisher = {ACM},
@@ -253,7 +253,7 @@
  year = {2001},
  isbn = {0-7695-1318-2},
  pages = {21--},
- url = {http://dl.acm.org/citation.cfm?id=580581.856565},
+%  url = {http://dl.acm.org/citation.cfm?id=580581.856565},
  acmid = {856565},
  publisher = {IEEE Computer Society},
  address = {Washington, DC, USA},
@@ -270,7 +270,7 @@
  location = {Beijing, China},
  pages = {311--314},
  numpages = {4},
- url = {http://doi.acm.org/10.1145/2030112.2030154},
+%  url = {http://doi.acm.org/10.1145/2030112.2030154},
  doi = {10.1145/2030112.2030154},
  acmid = {2030154},
  publisher = {ACM},
@@ -315,7 +315,7 @@
  author = {LaViola,Jr., Joseph J.},
  title = {A Survey of Hand Posture and Gesture Recognition Techniques and Technology},
  year = {1999},
- source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Abrowncs%3ABrownCS%2F%2FCS-99-11},
+%  source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Abrowncs%3ABrownCS%2F%2FCS-99-11},
  publisher = {Brown University},
  address = {Providence, RI, USA},
 } 
