pre-final version

--- a/LaTeX/sample.bib
+++ b/LaTeX/sample.bib
@@ -329,3 +329,111 @@
  publisher = {John Wiley \& Sons, Inc.},
  address = {New York, NY, USA},
 } 
+
+@INPROCEEDINGS{5418904, 
+author={Jeong-mook Lim and Dong-Woo Lee and Bae-sun Kim and Il-Yeon Cho and Jae-Cheol Ryou}, 
+booktitle={Consumer Electronics (ICCE), 2010 Digest of Technical Papers International Conference on}, 
+title={Recognizing hand gestures using wrist shapes}, 
+year={2010}, 
+month={Jan}, 
+pages={197-198}, 
+keywords={gesture recognition;tactile sensors;virtual reality;finger flexor tendons;finger/hand movement recognition;generic button event;hand gesture recognition interface;moving fingers;multitouch based interactions;picking operation;pinch motion;small-sized IR optic sensor;virtual button;vision-based approach;wrist shapes;Acoustic sensors;Electromyography;Fingers;Infrared sensors;Sensor phenomena and characterization;Shape;Skin;Tendons;Wearable sensors;Wrist}, 
+doi={10.1109/ICCE.2010.5418904},}
+
+
+%CyberGlove
+@INPROCEEDINGS{1414484, 
+author={Kevin, N.Y.Y. and Ranganath, S. and Ghosh, D.}, 
+booktitle={TENCON 2004. 2004 IEEE Region 10 Conference}, 
+title={Trajectory modeling in gesture recognition using CyberGloves reg; and magnetic trackers}, 
+year={2004}, 
+month={Nov}, 
+volume={A}, 
+pages={571-574 Vol. 1}, 
+keywords={gesture recognition;human computer interaction;probability;American sign language gestures;CyberGloves;condensation-based trajectory matching;gesture recognition;human gestures recognition;human-computer interaction applications;magnetic trackers;probability measures;trajectory modeling;Algorithm design and analysis;Application software;Data gloves;Goniometers;Handicapped aids;Hidden Markov models;Humans;Magnetic analysis;Position measurement;Trajectory}, 
+doi={10.1109/TENCON.2004.1414484},}
+
+%SixSense
+@inproceedings{Mistry:2009:SWG:1667146.1667160,
+ author = {Mistry, Pranav and Maes, Pattie},
+ title = {SixthSense: A Wearable Gestural Interface},
+ booktitle = {ACM SIGGRAPH ASIA 2009 Sketches},
+ series = {SIGGRAPH ASIA '09},
+ year = {2009},
+ location = {Yokohama, Japan},
+ pages = {11:1--11:1},
+ articleno = {11},
+ numpages = {1},
+%  url = {http://doi.acm.org/10.1145/1667146.1667160},
+ doi = {10.1145/1667146.1667160},
+ acmid = {1667160},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {augmented reality, gestural interaction, multi-touch interaction, object augmentation, wearable computing},
+} 
+
+
+%Ubi-finger
+@inproceedings{tsukada2001ubi,
+  title={Ubi-Finger: Gesture Input Device for Mobile Use},
+  author={Tsukada, Koji and Yasumura, Michiaki},
+  booktitle={Ubicomp 2001 Informal Companion Proceedings},
+  pages={11},
+  year={2001},
+  organization={Citeseer}
+}
+
+%ACC GLOVE
+@inproceedings{806717, 
+author={Perng, J.K. and Fisher, Brian and Hollar, S. and Pister, K.S.J.}, 
+booktitle={Wearable Computers, 1999. Digest of Papers. The Third International Symposium on}, 
+title={Acceleration sensing glove (ASG)}, 
+year={1999}, 
+month={Oct}, 
+pages={178-180}, 
+keywords={accelerometers;data gloves;gesture recognition;Windows 95;Windows NT;acceleration sensing glove;accelerometers;commercial-off-the-shelf components;gravity induced acceleration offsets;mouse;pointing device;pseudo static gestures;Acceleration;Accelerometers;Actuators;Data analysis;Fingers;Gravity;Mice;Motion detection;Radio frequency;Wrist}, 
+% doi={10.1109/ISWC.1999.806717},}
+
+%SCURRY
+@ARTICLE{1546364, 
+author={Yoon Sang Kim and Byung Seok Soh and Sang-Goog Lee}, 
+journal={Industrial Electronics, IEEE Transactions on}, 
+title={A new wearable input device: SCURRY}, 
+year={2005}, 
+month={Dec}, 
+volume={52}, 
+number={6}, 
+pages={1490-1499}, 
+keywords={accelerometers;gyroscopes;human computer interaction;interactive devices;sensors;SCURRY;acceleration sensors;accelerometers;angular-velocity sensors;finger clicking;glovelike device;hand motion;inertial sensors;microcontroller;receiver;recognition performance;transceiver;wearable input device;Acceleration;Accelerometers;Communication system control;Fingers;Gyroscopes;Humans;Mice;Motion detection;Transceivers;Wearable sensors;Finger clicking;SCURRY;inertial sensor;recognition performance;wearable input device}, 
+% doi={10.1109/TIE.2005.858736}, 
+ISSN={0278-0046},}
+
+%The Sound of One Hand
+@inproceedings{Amento:2002:SOH:506443.506566,
+ author = {Amento, Brian and Hill, Will and Terveen, Loren},
+ title = {The Sound of One Hand: A Wrist-mounted Bio-acoustic Fingertip Gesture Interface},
+ booktitle = {CHI '02 Extended Abstracts on Human Factors in Computing Systems},
+ series = {CHI EA '02},
+ year = {2002},
+ isbn = {1-58113-454-1},
+ location = {Minneapolis, Minnesota, USA},
+ pages = {724--725},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/506443.506566},
+%  doi = {10.1145/506443.506566},
+ acmid = {506566},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {acoustics, fingers, gestural interfaces, gestures, human-computer interaction, mobile devices, wrist},
+} 
+
+%Hambone
+@INPROCEEDINGS{4373768, 
+author={Deyle, T. and Palinko, S. and Poole, E.S. and Starner, T.}, 
+booktitle={Wearable Computers, 2007 11th IEEE International Symposium on}, 
+title={Hambone: A Bio-Acoustic Gesture Interface}, 
+year={2007}, 
+month={Oct}, 
+pages={3-10}, 
+keywords={acoustic transducers;bioacoustics;biosensors;hidden Markov models;medical computing;piezoelectric transducers;user interfaces;HMM;Hambone;bio-acoustic gesture interface;bone conduction;gesture-based mobile device interaction;hidden Markov models;multitasking capabilities;piezoelectric sensors;unobtrusive system;Acoustic sensors;Application software;Bones;Computer interfaces;Hardware;Hidden Markov models;Mobile computing;Prototypes;Software prototyping;Wrist}, 
+% doi={10.1109/ISWC.2007.4373768},}
